--- a/.github/workflows/sync_all_branches.yml
+++ b/.github/workflows/sync_all_branches.yml
@@ -1,11 +1,12 @@
-name: Sync upstream all branches
+name: Sync all branches from upstream
+
 on:
   schedule:
-    - cron: '0 * * * *'   # 每小时自动运行一次
-  workflow_dispatch:       # 手动触发
+    - cron: '0 * * * *'  # 每小时自动同步一次
+  workflow_dispatch:      # 支持手动触发
 
 jobs:
-  sync-all-branches:
+  sync:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout your repo
