--- a/.github/workflows/sync_all_branches.yml
+++ b/.github/workflows/sync_all_branches.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout your repo
         uses: actions/checkout@v4
@@ -32,7 +33,6 @@ jobs:
               git checkout $branch
               git merge upstream/$branch --allow-unrelated-histories || true
             fi
-            git pull origin $branch --rebase || true    # 自动 rebase 本地和远程
+            git pull origin $branch --rebase || true
             git push origin $branch
           done
-   
