--- a/.github/workflows/sync_all_branches.yml
+++ b/.github/workflows/sync_all_branches.yml
@@ -31,14 +31,14 @@ jobs:
               git checkout -b $branch upstream/$branch
             else
               git checkout $branch
-              # 尝试合并upstream/$branch
               git merge upstream/$branch --allow-unrelated-histories || (
-                echo "Conflict, using upstream version for all files"
+                # 冲突时用upstream强制覆盖
                 git checkout upstream/$branch -- .
                 git add .
                 git commit -m "Resolved conflicts by using upstream version"
               )
             fi
-            git push origin $branch
+            # 这里使用 --force 强制覆盖远端分支
+            git push origin $branch --force
           done
 
