--- a/.github/workflows/txt-to-yaml.yml
+++ b/.github/workflows/txt-to-yaml.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: ruleset
 
       - name: Convert surge/*.list to surge/*.yaml
         run: |
